Fix hover style to avoid shifting

--- a/src/ProductGrid.css
+++ b/src/ProductGrid.css
@@ -15,7 +15,7 @@
 }
 
 .ProductGridItem:hover {
-  border: 2px solid #f8cb00;
+  border: 1px solid #f8cb00;
 }
 
 .ProductGridItem__img {
